--- a/Code/User/partials/settings/languages/typescript.json
+++ b/Code/User/partials/settings/languages/typescript.json
@@ -15,6 +15,8 @@
 	"typescript.suggest.completeFunctionCalls": true,
 	"typescript.suggest.includeAutomaticOptionalChainCompletions": true,
 	"typescript.autoClosingTags": true,
+	"typescript.disableAutomaticTypeAcquisition": true,
+	"typescript.tsserver.useSeparateSyntaxServer": true,
 	"[typescript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	}
