--- a/Code/User/partials/settings/languages/python.json
+++ b/Code/User/partials/settings/languages/python.json
@@ -1,7 +1,7 @@
 {
 	"$schema": "vscode://schemas/settings/default",
 	"[python]": {
-		"editor.defaultFormatter": "ms-python.black-formatter"
+		"editor.defaultFormatter": "ms-python.python"
 	},
 	"python.analysis.reportExtraTelemetry": false
 }
