--- a/Code/User/partials/settings/languages/typescript.json
+++ b/Code/User/partials/settings/languages/typescript.json
@@ -1,6 +1,12 @@
 {
 	"$schema": "vscode://schemas/settings/default",
 	"javascript.suggest.autoImports": true,
+	"javascript.updateImportsOnFileMove.enabled": "always",
+	"javascript.preferences.useAliasesForRenames": false,
+	"javascript.format.insertSpaceAfterConstructor": true,
+	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
+	"javascript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
+	"javascript.format.placeOpenBraceOnNewLineForFunctions": true,
 	"[javascript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	},
@@ -8,7 +14,7 @@
 	"typescript.preferences.useAliasesForRenames": false,
 	"typescript.suggest.autoImports": true,
 	"typescript.preferences.quoteStyle": "single",
-	"typescript.tsserver.log": "off",
+	"typescript.tsserver.log": "terse",
 	"typescript.inlayHints.parameterNames.enabled": "all",
 	"typescript.inlayHints.propertyDeclarationTypes.enabled": true,
 	"typescript.tsserver.maxTsServerMemory": 8096,
@@ -17,6 +23,11 @@
 	"typescript.autoClosingTags": true,
 	"typescript.disableAutomaticTypeAcquisition": true,
 	"typescript.tsserver.useSyntaxServer": "always",
+	"typescript.format.insertSpaceAfterConstructor": true,
+	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
+	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
+	"typescript.format.insertSpaceBeforeFunctionParenthesis": true,
+	"typescript.format.placeOpenBraceOnNewLineForFunctions": true,
 	"[typescript]": {
 		"editor.defaultFormatter": "biomejs.biome"
 	}
