--- a/Code/User/partials/settings/languages/typescript.json
+++ b/Code/User/partials/settings/languages/typescript.json
@@ -22,7 +22,7 @@
 	"typescript.suggest.includeAutomaticOptionalChainCompletions": true,
 	"typescript.autoClosingTags": true,
 	"typescript.disableAutomaticTypeAcquisition": true,
-	"typescript.tsserver.useSyntaxServer": "always",
+	"typescript.tsserver.useSyntaxServer": "auto",
 	"typescript.format.insertSpaceAfterConstructor": true,
 	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyBrackets": true,
 	"typescript.format.insertSpaceAfterOpeningAndBeforeClosingNonemptyParenthesis": true,
