feat(flash): enhance plugin by AI

--- a/Code/User/partials/settings/languages/typescript.json
+++ b/Code/User/partials/settings/languages/typescript.json
@@ -14,7 +14,7 @@
 	"typescript.preferences.useAliasesForRenames": false,
 	"typescript.suggest.autoImports": true,
 	"typescript.preferences.quoteStyle": "single",
-	"typescript.tsserver.log": "terse",
+	"typescript.tsserver.log": "off",
 	"typescript.inlayHints.parameterNames.enabled": "all",
 	"typescript.inlayHints.propertyDeclarationTypes.enabled": true,
 	"typescript.tsserver.maxTsServerMemory": 8096,
